src/test/deca/context/invalid/provided/testi09.deca
class X{
    X boomy(float x){}
}
class Z {
    X boomy(float x){}
}
class Y extends X{
    Z boomy(float x){}
}